fix: fix username wrap in user-panel (#704)

--- a/src/app/theme/sidebar/user-panel.component.scss
+++ b/src/app/theme/sidebar/user-panel.component.scss
@@ -46,6 +46,7 @@
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   h4 {
